# PennyLane-IonQ-sc

./: .editorconfig  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  Makefile  README.rst  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  format.yml  tests.yml  upload.yml
doc/: Makefile  conf.py  devices.rst  index.rst  installation.rst  requirements.txt  support.rst
doc/_ext/: edit_on_github.py
doc/code/: __init__.rst  ops.rst
pennylane_ionq/: __init__.py  _version.py  capabilities.toml  decompositions.py  device.py  ops.py  serialize.py  specs.py
tests/: conftest.py  test_decompositions.py  test_device.py  test_ops.py  test_serialize.py
