[project]
name = "pennylane-ionq"
version = "0.45.0"
description = "PennyLane plugin for IonQ Quantum Cloud"
requires-python = ">=3.11"
dependencies = ["pennylane>=0.44", "ionq-core~=0.1.0"]

[project.entry-points."pennylane.plugins"]
"ionq.simulator" = "pennylane_ionq:IonQSimulatorDevice"
"ionq.qpu" = "pennylane_ionq:IonQQPUDevice"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "ty"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.11"
