[project]
name = "pennylane-ionq"
version = "0.45.0"
description = "PennyLane plugin for IonQ Quantum Cloud"
readme = "README.rst"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Xanadu Quantum Technologies Inc." }]
maintainers = [{ name = "IonQ", email = "support@ionq.com" }]
keywords = [
    "quantum",
    "quantum-computing",
    "pennylane",
    "ionq",
    "trapped-ion",
    "qml",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["pennylane>=0.44", "ionq-core"]

[project.urls]
Homepage = "https://docs.pennylane.ai/projects/ionq"
Documentation = "https://docs.pennylane.ai/projects/ionq"
Source = "https://github.com/PennyLaneAI/pennylane-ionq"
Issues = "https://github.com/PennyLaneAI/pennylane-ionq/issues"
Changelog = "https://github.com/PennyLaneAI/pennylane-ionq/blob/master/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov",
    "pytest-mock",
    "respx",
]
docs = [
    "sphinx>=8.1",
    "sphinx-automodapi>=0.19",
    "pennylane-sphinx-theme",
]

[project.entry-points."pennylane.plugins"]
"ionq.simulator" = "pennylane_ionq:IonQSimulatorDevice"
"ionq.qpu" = "pennylane_ionq:IonQQPUDevice"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pennylane_ionq"]

[tool.hatch.build.targets.sdist]
include = [
    "/pennylane_ionq",
    "/tests",
    "/doc",
    "/README.rst",
    "/CHANGELOG.md",
    "/LICENSE",
    "/Makefile",
    "/pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-mock",
    "respx",
    "ruff>=0.6",
    "ty",
    "pre-commit",
]

[tool.uv.sources]
ionq-core = { git = "https://github.com/ionq/ionq-core-python.git", branch = "pauliexp-gate-schema" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = [
    "error::pennylane.exceptions.PennyLaneDeprecationWarning",
]

[tool.coverage.run]
source = ["pennylane_ionq"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
